Fix z-indexing on elements, fix controls positioning and bugs with it, add panning to touch devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,7 @@
 	}
 	@media screen and (max-width: 1024px) {
 		nav ul {
+			z-index: 1000;
 			display: flex;
 			flex-direction: column;
 			position: absolute;
